--- a/src/App.css
+++ b/src/App.css
@@ -23,16 +23,18 @@
   float: left;
 }
 .workers-content-past{
-  width: 20%;
+  width: 19%;
   float: left;
+  border-right: 3px dashed burlywood;
 }
 .workTypes-content{
   width: 80%;
   float: left;
 }
 .workTypes-content-past{
-  width: 10%;
+  width: 9%;
   float: left;
+  border-right: 3px dashed burlywood;
 }
 .jobs-content{
   width: 70%;
@@ -41,6 +43,7 @@
 
 .worker {
   background: #94db12;
+  font-size: 24px;
 }
 .workType {
   background: #cbdb12;
@@ -49,6 +52,11 @@
   background: #db9712;
 }
 
+.loggedOut{
+  margin: 5px;
+  display: inline-block;
+  background: repeating-linear-gradient( -45deg, #94db12 2px, #7e9e43 3px, #7e9e43 4px, #94db12 7px);
+}
 .worker-past.tile{
   width:100px;
   height:30px;
@@ -107,7 +115,40 @@
   /* width: 150px;
   height: 150px; */
 }
-@keyframes App-logo-spin {
+
+.loader-box-active.loader-box{
+  display:block;
+}
+.loader-box
+{
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.loader {
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%; /* Could be more or less, depending on screen size */
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid rgb(97, 130, 143);
+  border-bottom: 16px solid rgb(97, 130, 143);
+  width: 80px;
+  height: 80px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  
+}
+
+@keyframes spin {
   from {
     transform: rotate(0deg);
   }
