--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -1,6 +1,7 @@
 /* The Modal (background) */
 .modal-active.modal{
     display:block;
+    z-index: 999;
 }
 .modal {
     display: none; /* Hidden by default */
@@ -23,23 +24,60 @@
     border: 1px solid #888;
     width: fit-content; /* Could be more or less, depending on screen size */
     border-radius:8px;
+    width:40%;
   }
   
+  .popup-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: fit-content; /* Could be more or less, depending on screen size */
+    border-radius:8px;
+  }
   /* The Close Button */
   .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: bold;
     position: relative;
     right: -20px;
     top: -20px;
     border-top-right-radius: 8px;
+    background: none;
+    border-bottom: 1px solid #aaa;
+    border-left: 1px solid #aaa;
+    border-right: none;
+    border-top: none;
+    width: 50px;
   }
   
   .close:hover,
   .close:focus {
-    color: black;
+    color: #e52f00;
     text-decoration: none;
     cursor: pointer;
+    background: #ddd;
+  }
+  
+  .claimFormTable{
+    width: 100%;
+    border-spacing: 0;
+  }
+  .claimFormTable tr>td:first-child
+  {
+    width:30%;
+    text-align: right;
+    padding-right: 15px;
+  }
+  .claimFormTable tr:nth-child(even)
+  {
+    background-color: rgb(219, 218, 218);
+  }
+  .claimFormTable tr:last-child>td:last-child{
+    text-align: right;
+  }
+  .claimFormTable td{
+    padding: 5px;
   }
